added chapter 1 and edited chapter 2 code

--- a/Part 0/Chapter 1.ipynb
+++ b/Part 0/Chapter 1.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Chapter 1\n",
     "\n",
-    "# The Travelling Diabetes Clinic: A firts take at the problem "
+    "# The Travelling Diabetes Clinic: A firts take at the problem \n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -27,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +995,7 @@
        "[768 rows x 9 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1021,21 +1023,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data_of_interest = data.loc[:, [\"Blood Glucose\", \"BMI\", \"Class\"]]"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.2 A Simple ML Attempt with scikit-learn\n",
+    "\n",
+    "### 1.2.2 Implementing the Model with scikit-learn\n",
+    "\n",
+    "Training a perceptron model after splitting the data into a training and testing parts. You can learn more about the `Perceptron` model and the `train_test_split` method at their documentation [here](http://scikit-learn.org/stable/modules/generated/sklearn.linear_model.Perceptron.html) and [here](http://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html). scikit-learn has one of the best docs in the field. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mostafa/anaconda3/lib/python3.6/site-packages/sklearn/linear_model/stochastic_gradient.py:128: FutureWarning: max_iter and tol parameters have been added in <class 'sklearn.linear_model.perceptron.Perceptron'> in 0.19. If both are left unset, they default to max_iter=5 and tol=None. If tol is not None, max_iter defaults to max_iter=1000. From 0.21, default max_iter will be 1000, and default tol will be 1e-3.\n",
+      "  \"and default tol will be 1e-3.\" % type(self), FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Perceptron(alpha=0.0001, class_weight=None, eta0=1.0, fit_intercept=True,\n",
+       "      max_iter=None, n_iter=None, n_jobs=1, penalty=None, random_state=0,\n",
+       "      shuffle=True, tol=None, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import Perceptron\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X = data_of_interest.loc[:, [\"Blood Glucose\", \"BMI\"]]\n",
+    "y = data_of_interest.loc[:, \"Class\"]\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
+    "\n",
+    "classifier = Perceptron()\n",
+    "classifier.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "Testing the trained model accuracy on the test data using the `score` method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction Accuracy: 50.52%\n"
+     ]
+    }
+   ],
+   "source": [
+    "accuracy = classifier.score(X_test, y_test)\n",
+    "print(\"Prediction Accuracy: {:.2f}%\".format(accuracy * 100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "Showing that the model is performing badly even on the training data that it's supposed to ace!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Prediction Accuracy: 46.35%\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_accuracy = classifier.score(X_train, y_train)\n",
+    "print(\"Training Prediction Accuracy: {:.2f}%\".format(train_accuracy * 100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.2.3 Establishing a Baseline\n",
+    "We here use the `DummyClassifier` with the `most_frequent` startegy to establish a baseline to improve on in the coming chapters. You can learn more about the supported startegies in the [docs](http://scikit-learn.org/stable/modules/generated/sklearn.dummy.DummyClassifier.html#sklearn.dummy.DummyClassifier)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dummy Prediction Accuracy: 64.06%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.dummy import DummyClassifier\n",
+    "\n",
+    "dummy_baseline = DummyClassifier(strategy=\"most_frequent\")\n",
+    "dummy_baseline.fit(X_train, y_train)\n",
+    "\n",
+    "baseline_accuracy = dummy_baseline.score(X_test, y_test)\n",
+    "print(\"Dummy Prediction Accuracy: {:.2f}%\".format(baseline_accuracy * 100))"
+   ]
   }
  ],
  "metadata": {
