edited Ch2 and Ch3 code

--- a/Part 0/Chapter 2.ipynb
+++ b/Part 0/Chapter 2.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# configures the notebook to show plots inside it\n",
@@ -15,7 +17,7 @@
    "metadata": {},
    "source": [
     "# Chapter 2\n",
-    "# Descriptive Statistics: What do we Know about the Data?\n",
+    "# Grokking the Problem: What does the Data Look Like?\n",
     "---"
    ]
   },
