correct typos reported in #3

--- a/Notebooks Kickstarter.ipynb
+++ b/Notebooks Kickstarter.ipynb
@@ -18,7 +18,7 @@
     "* bullet points lists, like the one happeining write now.\n",
     "* Numbered lists like what you saw above.\n",
     "* inline equations like that $\\overline{x} = \\sum_{i=0}^{m} x_i$ using [Latex](http://data-blog.udacity.com/posts/2016/10/latex-primer/).\n",
-    "* big equations on there own lines\n",
+    "* big equations on their own lines\n",
     "$$\\overline{x} = \\sum_{i=0}^{m} x_i$$\n",
     "* Hyperlinks\n",
     "* Tables\n",
